--- a/pancurses/fn.init_pair.html
+++ b/pancurses/fn.init_pair.html
@@ -46,8 +46,15 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-62' class='srclink' href='../src/pancurses/lib.rs.html#85-87' title='goto source code'>[src]</a></span></h1>
-<pre class='rust fn'>pub fn init_pair(pair_index: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>, foreground_color: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>, background_color: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>) -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre></section>
+        </span><a id='src-80' class='srclink' href='../src/pancurses/lib.rs.html#150-152' title='goto source code'>[src]</a></span></h1>
+<pre class='rust fn'>pub fn init_pair(pair_index: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>, foreground_color: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>, background_color: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a>) -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre><div class='docblock'><p>Changes the definition of a color-pair.</p>
+
+<p>It takes three arguments: the number of the color-pair to be redefined, and the new values of
+the foreground and background colors. The pair number must be between 0 and COLOR_PAIRS - 1,
+inclusive. The foreground and background must be between 0 and COLORS - 1, inclusive. If the
+color pair was previously initialized, the screen is refreshed, and all occurrences of that
+color-pair are changed to the new definition.</p>
+</div></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
