--- a/pancurses/fn.initscr.html
+++ b/pancurses/fn.initscr.html
@@ -46,8 +46,10 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-60' class='srclink' href='../src/pancurses/lib.rs.html#80-83' title='goto source code'>[src]</a></span></h1>
-<pre class='rust fn'>pub fn initscr() -&gt; <a class='struct' href='../pancurses/struct.Window.html' title='pancurses::Window'>Window</a></pre><div class='docblock'><p>Initialize the curses system, this must be the first function that is called</p>
+        </span><a id='src-78' class='srclink' href='../src/pancurses/lib.rs.html#138-141' title='goto source code'>[src]</a></span></h1>
+<pre class='rust fn'>pub fn initscr() -&gt; <a class='struct' href='../pancurses/struct.Window.html' title='pancurses::Window'>Window</a></pre><div class='docblock'><p>Initialize the curses system, this must be the first function that is called.</p>
+
+<p>Returns a Window struct that is used to access Window specific functions.</p>
 </div></section>
     <section id='search' class="content hidden"></section>
 
