--- a/pancurses/fn.noecho.html
+++ b/pancurses/fn.noecho.html
@@ -46,8 +46,12 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-73' class='srclink' href='../src/pancurses/lib.rs.html#98-100' title='goto source code'>[src]</a></span></h1>
-<pre class='rust fn'>pub fn noecho() -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre></section>
+        </span><a id='src-86' class='srclink' href='../src/pancurses/lib.rs.html#163-165' title='goto source code'>[src]</a></span></h1>
+<pre class='rust fn'>pub fn noecho() -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre><div class='docblock'><p>Disables echoing typed characters.</p>
+
+<p>Initially, input characters are echoed. Subsequent calls to echo() and noecho() do not flush
+type-ahead.</p>
+</div></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
