--- a/pancurses/fn.start_color.html
+++ b/pancurses/fn.start_color.html
@@ -46,8 +46,11 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-78' class='srclink' href='../src/pancurses/lib.rs.html#111-113' title='goto source code'>[src]</a></span></h1>
-<pre class='rust fn'>pub fn start_color() -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre></section>
+        </span><a id='src-87' class='srclink' href='../src/pancurses/lib.rs.html#170-172' title='goto source code'>[src]</a></span></h1>
+<pre class='rust fn'>pub fn start_color() -&gt; <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i32.html'>i32</a></pre><div class='docblock'><p>Initializes eight basic colors (black, red, green, yellow, blue, magenta, cyan,
+and white), and two global variables; COLORS and COLOR_PAIRS (respectively defining the
+maximum number of colors and color-pairs the terminal is capable of displaying).</p>
+</div></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
