--- a/pancurses/constant.COLOR_MAGENTA.html
+++ b/pancurses/constant.COLOR_MAGENTA.html
@@ -46,7 +46,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-28' class='srclink' href='../src/pancurses/lib.rs.html#31' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-270' class='srclink' href='../src/pancurses/windows/mod.rs.html#11' title='goto source code'>[src]</a></span></h1>
 <pre class='rust const'>pub const COLOR_MAGENTA: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.i16.html'>i16</a><code> = </code><code>COLOR_RED | COLOR_BLUE</code></pre></section>
     <section id='search' class="content hidden"></section>
 
