--- a/src/pancurses/lib.rs.html
+++ b/src/pancurses/lib.rs.html
@@ -213,7 +213,74 @@
 <span id="170">170</span>
 <span id="171">171</span>
 <span id="172">172</span>
+<span id="173">173</span>
+<span id="174">174</span>
+<span id="175">175</span>
+<span id="176">176</span>
+<span id="177">177</span>
+<span id="178">178</span>
+<span id="179">179</span>
+<span id="180">180</span>
+<span id="181">181</span>
+<span id="182">182</span>
+<span id="183">183</span>
+<span id="184">184</span>
+<span id="185">185</span>
+<span id="186">186</span>
+<span id="187">187</span>
+<span id="188">188</span>
+<span id="189">189</span>
+<span id="190">190</span>
+<span id="191">191</span>
+<span id="192">192</span>
+<span id="193">193</span>
+<span id="194">194</span>
+<span id="195">195</span>
+<span id="196">196</span>
+<span id="197">197</span>
+<span id="198">198</span>
+<span id="199">199</span>
+<span id="200">200</span>
+<span id="201">201</span>
+<span id="202">202</span>
+<span id="203">203</span>
+<span id="204">204</span>
+<span id="205">205</span>
+<span id="206">206</span>
+<span id="207">207</span>
+<span id="208">208</span>
+<span id="209">209</span>
+<span id="210">210</span>
+<span id="211">211</span>
+<span id="212">212</span>
+<span id="213">213</span>
+<span id="214">214</span>
+<span id="215">215</span>
+<span id="216">216</span>
+<span id="217">217</span>
+<span id="218">218</span>
+<span id="219">219</span>
+<span id="220">220</span>
+<span id="221">221</span>
+<span id="222">222</span>
+<span id="223">223</span>
+<span id="224">224</span>
+<span id="225">225</span>
+<span id="226">226</span>
+<span id="227">227</span>
+<span id="228">228</span>
+<span id="229">229</span>
+<span id="230">230</span>
+<span id="231">231</span>
+<span id="232">232</span>
+<span id="233">233</span>
+<span id="234">234</span>
+<span id="235">235</span>
+<span id="236">236</span>
 </pre><pre class='rust '>
+<span class='attribute'>#[<span class='ident'>macro_use</span>]</span>
+<span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>log</span>;
+
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>windows</span>)]</span>
 <span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>pdcurses</span>;
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>unix</span>)]</span>
@@ -230,6 +297,9 @@
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>unix</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>ncurses</span>::<span class='ident'>ll</span>::<span class='ident'>chtype</span>;
 
+<span class='kw'>mod</span> <span class='ident'>input</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='self'>self</span>::<span class='ident'>input</span>::<span class='op'>*</span>;
+
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>windows</span>)]</span>
 <span class='kw'>mod</span> <span class='ident'>windows</span>;
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>windows</span>)]</span>
@@ -239,15 +309,7 @@
 <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>unix</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='self'>self</span>::<span class='ident'>unix</span>::<span class='op'>*</span>;
 
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_BLACK</span>: <span class='ident'>i16</span> <span class='op'>=</span> <span class='number'>0</span>;
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_RED</span>: <span class='ident'>i16</span> <span class='op'>=</span> <span class='number'>1</span>;
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_GREEN</span>: <span class='ident'>i16</span> <span class='op'>=</span> <span class='number'>2</span>;
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_BLUE</span>: <span class='ident'>i16</span> <span class='op'>=</span> <span class='number'>4</span>;
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_CYAN</span>: <span class='ident'>i16</span> <span class='op'>=</span> (<span class='ident'>COLOR_BLUE</span> <span class='op'>|</span> <span class='ident'>COLOR_GREEN</span>);
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_MAGENTA</span>: <span class='ident'>i16</span> <span class='op'>=</span> (<span class='ident'>COLOR_RED</span> <span class='op'>|</span> <span class='ident'>COLOR_BLUE</span>);
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_YELLOW</span>: <span class='ident'>i16</span> <span class='op'>=</span> (<span class='ident'>COLOR_RED</span> <span class='op'>|</span> <span class='ident'>COLOR_GREEN</span>);
-<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>COLOR_WHITE</span>: <span class='ident'>i16</span> <span class='op'>=</span> <span class='number'>7</span>;
-
+<span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>OK</span>: <span class='ident'>i32</span> <span class='op'>=</span> <span class='number'>0</span>;
 <span class='kw'>pub</span> <span class='kw'>const</span> <span class='ident'>ERR</span>: <span class='ident'>i32</span> <span class='op'>=</span> <span class='op'>-</span><span class='number'>1</span>;
 
 <span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Copy</span>, <span class='ident'>Clone</span>, <span class='ident'>Debug</span>)]</span>
@@ -271,17 +333,24 @@
 
     <span class='doccomment'>/// Read a character from the terminal associated with the window.</span>
     <span class='doccomment'>///</span>
-    <span class='doccomment'>/// In nodelay mode, if there is no input waiting, the value ERR is returned. In delay mode,</span>
+    <span class='doccomment'>/// In nodelay mode, if there is no input waiting, None is returned. In delay mode,</span>
     <span class='doccomment'>/// the program will hang until the system  passes text through to the program. Depending on</span>
     <span class='doccomment'>/// the setting of cbreak(), this will be after one character or after the first newline.</span>
     <span class='doccomment'>/// Unless noecho() has been set, the character will also be echoed into the designated window.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// If keypad() is TRUE, and a function key is pressed, the token for that function key will be</span>
     <span class='doccomment'>/// returned instead of the raw characters.</span>
-    <span class='doccomment'>/// If nodelay(win, TRUE) has been called on the window and no input is waiting, the value ERR</span>
-    <span class='doccomment'>/// is returned.</span>
-    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>getch</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
-        <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>wgetch</span>(<span class='self'>self</span>.<span class='ident'>_window</span>) }
+    <span class='doccomment'>/// If nodelay(win, TRUE) has been called on the window and no input is waiting, None is</span>
+    <span class='doccomment'>/// returned.</span>
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>getch</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='ident'>Input</span><span class='op'>&gt;</span> {
+        <span class='kw'>let</span> <span class='ident'>i</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>wgetch</span>(<span class='self'>self</span>.<span class='ident'>_window</span>) };
+        <span class='kw'>if</span> <span class='ident'>i</span> <span class='op'>&lt;</span> <span class='number'>0</span> {
+            <span class='prelude-val'>None</span>
+        } <span class='kw'>else</span> <span class='kw'>if</span> <span class='ident'>i</span> <span class='op'>&lt;=</span> <span class='ident'>u8</span>::<span class='ident'>max_value</span>() <span class='kw'>as</span> <span class='ident'>i32</span> {
+            <span class='prelude-val'>Some</span>(<span class='ident'>Input</span>::<span class='ident'>Character</span>(<span class='ident'>i</span> <span class='kw'>as</span> <span class='ident'>u8</span> <span class='kw'>as</span> <span class='ident'>char</span>))
+        } <span class='kw'>else</span> {
+            <span class='prelude-val'>Some</span>(<span class='ident'>to_special_keycode</span>(<span class='ident'>i</span>))
+        }
     }
 
     <span class='doccomment'>/// Return the maximum x value of this Window, in other words the number of columns.</span>
@@ -294,12 +363,26 @@
         <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>getmaxy</span>(<span class='self'>self</span>.<span class='ident'>_window</span>) }
     }
 
+    <span class='doccomment'>/// Controls whether getch() returns function/special keys as single key codes (e.g., the left</span>
+    <span class='doccomment'>/// arrow key as KEY_LEFT).</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// Per X/Open, the default for keypad mode is OFF. You&#39;ll probably want it on. With keypad</span>
+    <span class='doccomment'>/// mode off, if a special key is pressed, getch() does nothing or returns ERR.</span>
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>keypad</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>use_keypad</span>: <span class='ident'>bool</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+        <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>keypad</span>(<span class='self'>self</span>.<span class='ident'>_window</span>, <span class='ident'>use_keypad</span> <span class='kw'>as</span> <span class='ident'>u8</span>) }
+    }
+
     <span class='doccomment'>/// The cursor associated with the window is moved to the given location.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// This does not move the physical cursor of the terminal until refresh() is called.  The</span>
     <span class='doccomment'>/// position specified is relative to the upper left corner of the window, which is (0,0).</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>mv</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>y</span>: <span class='ident'>i32</span>, <span class='ident'>x</span>: <span class='ident'>i32</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
         <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>wmove</span>(<span class='self'>self</span>.<span class='ident'>_window</span>, <span class='ident'>y</span>, <span class='ident'>x</span>) }
+    }
+
+    <span class='doccomment'>/// moves the cursor to the specified position and adds ch to the specified window</span>
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>mvaddch</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>y</span>: <span class='ident'>i32</span>, <span class='ident'>x</span>: <span class='ident'>i32</span>, <span class='ident'>ch</span>: <span class='ident'>char</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+        <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>mvwaddch</span>(<span class='self'>self</span>.<span class='ident'>_window</span>, <span class='ident'>y</span>, <span class='ident'>x</span>, <span class='ident'>ch</span> <span class='kw'>as</span> <span class='ident'>chtype</span>) }
     }
 
     <span class='doccomment'>/// Write all the characters of the string str to the given window. The functionality is</span>
@@ -328,11 +411,28 @@
     <span class='doccomment'>/// Controls whether wgetch() is a non-blocking call. If the option is enabled, and</span>
     <span class='doccomment'>/// no input is ready, wgetch() will return ERR. If disabled, wgetch() will hang until input is</span>
     <span class='doccomment'>/// ready.</span>
-    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>set_nodelay</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>enabled</span>: <span class='ident'>bool</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>nodelay</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>enabled</span>: <span class='ident'>bool</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
         <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>nodelay</span>(<span class='self'>self</span>.<span class='ident'>_window</span>, <span class='ident'>enabled</span> <span class='kw'>as</span> <span class='ident'>u8</span>) <span class='kw'>as</span> <span class='ident'>i32</span> }
+    }
+
+    <span class='doccomment'>/// Set blocking or non-blocking reads for the specified window.</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// The delay is measured in milliseconds. If it&#39;s negative, a blocking read is used; if zero,</span>
+    <span class='doccomment'>/// then non-blocking reads are done -- if no input is waiting, ERR is returned immediately.</span>
+    <span class='doccomment'>/// If the delay is positive, the read blocks for the delay period; if the period expires,</span>
+    <span class='doccomment'>/// ERR is returned.</span>
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>timeout</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>milliseconds</span>: <span class='ident'>i32</span>) {
+        <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>wtimeout</span>(<span class='self'>self</span>.<span class='ident'>_window</span>, <span class='ident'>milliseconds</span>) }
     }
 }
 
+<span class='doccomment'>/// Alters the appearance of the cursor</span>
+<span class='doccomment'>///</span>
+<span class='doccomment'>///  A visibility of 0 makes it disappear; 1 makes it appear &quot;normal&quot; (usually an underline) and 2</span>
+<span class='doccomment'>/// makes it &quot;highly visible&quot; (usually a block).</span>
+<span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>curs_set</span>(<span class='ident'>visibility</span>: <span class='ident'>i32</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+    <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>curs_set</span>(<span class='ident'>visibility</span>) }
+}
 
 <span class='doccomment'>/// Should be called before exiting or escaping from curses mode temporarily.</span>
 <span class='doccomment'>///</span>
@@ -372,6 +472,13 @@
     <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>napms</span>(<span class='ident'>ms</span>) }
 }
 
+<span class='doccomment'>/// Enables the translation of a carriage return into a newline on input.</span>
+<span class='doccomment'>///</span>
+<span class='doccomment'>/// nonl() disables this. Initially, the translation does occur.</span>
+<span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>nl</span>() <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+    <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>nl</span>() }
+}
+
 <span class='doccomment'>/// Disables echoing typed characters.</span>
 <span class='doccomment'>///</span>
 <span class='doccomment'>/// Initially, input characters are echoed. Subsequent calls to echo() and noecho() do not flush</span>
@@ -380,11 +487,32 @@
     <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>noecho</span>() }
 }
 
+<span class='doccomment'>/// Attempts to resize the screen to the given size.</span>
+<span class='doccomment'>///</span>
+<span class='doccomment'>/// resize_term() is effectively two functions: When called with nonzero values for nlines and</span>
+<span class='doccomment'>/// ncols, it attempts to resize the screen to the given size. When called with (0, 0), it merely</span>
+<span class='doccomment'>/// adjusts the internal structures to match the current size after the screen is resized by the</span>
+<span class='doccomment'>/// user. If you want to support user resizing, you should check for getch() returning KEY_RESIZE,</span>
+<span class='doccomment'>/// and/or call is_termresized() at appropriate times; if either condition occurs, call</span>
+<span class='doccomment'>/// resize_term(0, 0). Then, with either user or programmatic resizing, you&#39;ll have to resize any</span>
+<span class='doccomment'>/// windows you&#39;ve created.</span>
+<span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>resize_term</span>(<span class='ident'>nlines</span>: <span class='ident'>i32</span>, <span class='ident'>ncols</span>: <span class='ident'>i32</span>) <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+    <span class='ident'>_resize_term</span>(<span class='ident'>nlines</span>, <span class='ident'>ncols</span>)
+}
+
 <span class='doccomment'>/// Initializes eight basic colors (black, red, green, yellow, blue, magenta, cyan,</span>
 <span class='doccomment'>/// and white), and two global variables; COLORS and COLOR_PAIRS (respectively defining the</span>
 <span class='doccomment'>/// maximum number of colors and color-pairs the terminal is capable of displaying).</span>
 <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>start_color</span>() <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
     <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>start_color</span>() <span class='kw'>as</span> <span class='ident'>i32</span> }
+}
+
+<span class='doccomment'>/// Allows the use of -1 as a foreground or background color with init_pair().</span>
+<span class='doccomment'>///</span>
+<span class='doccomment'>/// Calls assume_default_colors(-1, -1); -1 represents the foreground or background color that</span>
+<span class='doccomment'>/// the terminal had at startup.</span>
+<span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>use_default_colors</span>() <span class='op'>-&gt;</span> <span class='ident'>i32</span> {
+    <span class='kw'>unsafe</span> { <span class='ident'>curses</span>::<span class='ident'>use_default_colors</span>() }
 }
 </pre>
 </section>
